<resources>
    <string name="app_name">TwitterCloneApp</string>
    <string name="profile">Profile</string>
    <string name="topics">Topics</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="list">List</string>
    <string name="twitter_blue">Twitter Blue</string>
    <string name="twitter_circle">Twitter Circle</string>
    <string name="search_twitter">Search Twitter</string>
    <string name="choose_audience">Choose audience</string>
    <string name="edit">Edit</string>
    <string name="search_direct_messages">Search Direct Messages</string>
    <string name="see_what_s_happening_in_the_world_right_now">See what\'s happening in the world right now.</string>
    <string name="create_account">Create account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="by_signing_up_you_agree_to_our_terms_privacy_policy_and_cookie_use">By signing up, you agree to our Terms, Privacy Policy and Cookie Use.</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="use_email_instead">Use email instead</string>
    <string name="use_phone_instead">Use phone instead</string>
    <string name="phone_number_or_email_address">Phone number or email address</string>
    <string name="name">Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="log_in">Log in</string>
    <string name="to_get_started_first_enter_your_phone_email_or_username">To get started, first enter your phone, email or @username</string>
    <string name="phone_email_or_username">Phone, email or username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="everyone_can_reply">Everyone can reply</string>
    <string name="tweet">Tweet</string>
    <string name="send_a_code_to_the_phone_number_ending_in">Send a code to the phone number ending in</string>
    <string name="send_an_email_to">Send an email to</string>
    <string name="contact_support_if_you_don_t_have_access">Contact Support if you don\'t have access.</string>
    <string name="trends_for_you">Trends for you</string>
    <string name="check_out_these_popular_and_trending_videos_for_you">Check out these popular and trending videos for you</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="edit_profile">Edit profile</string>
    <string name="replying_to">Replying to</string>
    <string name="use_device_settings">Use device settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="dark_mode">Dark mode</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dim">Dim</string>
    <string name="lights_out">Lights out</string>
</resources>