<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_item"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/twitter_blue_item"
        android:icon="@drawable/ic_twitter"
        android:title="@string/twitter_blue" />
    <item
        android:id="@+id/topics_item"
        android:icon="@drawable/ic_topic"
        android:title="@string/topics" />
    <item
        android:id="@+id/bookmarks_item"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/list_item"
        android:icon="@drawable/ic_list"
        android:title="@string/list" />
    <item
        android:id="@+id/iv_twitter_circle_item"
        android:icon="@drawable/ic_circle2"
        android:title="@string/twitter_circle" />
</menu>