<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/twitter_logo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/see_what_s_happening_in_the_world_right_now"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/black"
        android:hint="@string/continue_with_google"
        android:textColorHint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/black"
        android:hint="@string/create_account"
        android:textColorHint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login_google" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/by_signing_up_you_agree_to_our_terms_privacy_policy_and_cookie_use"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

    <TextView
        android:id="@+id/tv_have_an_account_already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/have_an_account_already"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/log_in"
        android:textColor="@color/twitter_blue"
        app:layout_constraintBottom_toBottomOf="@id/tv_have_an_account_already"
        app:layout_constraintStart_toEndOf="@id/tv_have_an_account_already"
        app:layout_constraintTop_toTopOf="@id/tv_have_an_account_already" />

</androidx.constraintlayout.widget.ConstraintLayout>