<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background"
    android:backgroundTint="@color/white">

    <View
        android:id="@+id/view"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/item_background"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/dark_mode"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/grayS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode" />

    <TextView
        android:id="@+id/tv_dark_mode_off"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/off"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <TextView
        android:id="@+id/tv_dark_mode_on"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginTop="25dp"
        android:text="@string/on"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_dark_mode_off"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode_off" />

    <TextView
        android:id="@+id/tv_dark_mode_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginTop="25dp"
        android:text="@string/use_device_settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_dark_mode_off"
        app:layout_constraintTop_toBottomOf="@+id/tv_dark_mode_on" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"
        android:background="@color/grayS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode_device" />

    <RadioGroup
        android:id="@+id/radio_group_dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_dark_mode_device"
        app:layout_constraintTop_toTopOf="@id/tv_dark_mode_off">

        <RadioButton
            android:id="@+id/rb_dark_mode_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/rb_dark_mode_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/rb_dark_mode_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <TextView
        android:id="@+id/tv_dark_theme_dim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/dim"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_dark_mode_off"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_theme" />

    <TextView
        android:id="@+id/tv_dark_theme_lights_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/lights_out"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_dark_theme_dim"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_theme_dim" />

    <RadioGroup
        android:id="@+id/radio_group_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/view4"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_theme">

        <RadioButton
            android:id="@+id/rb_dark_theme_dim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_dark_theme_lights_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RadioGroup>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_theme_lights_out" />

</androidx.constraintlayout.widget.ConstraintLayout>