<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_background"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/view_first"
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_background"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_choose_audience"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_audience"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_first" />

    <View
        android:id="@+id/view_second"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_audience" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_public"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_public"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_second"
        app:shapeAppearanceOverlay="@style/RadiusImageView" />

    <TextView
        android:id="@+id/tv_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Public"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_public"
        app:layout_constraintStart_toEndOf="@id/iv_public"
        app:layout_constraintTop_toTopOf="@id/iv_public" />


    <View
        android:id="@+id/view_third"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_public" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_twitter_circle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_third"
        app:shapeAppearanceOverlay="@style/RadiusImageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/twitter_circle"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_twitter_circle"
        app:layout_constraintStart_toEndOf="@id/iv_twitter_circle"
        app:layout_constraintTop_toTopOf="@id/iv_twitter_circle"
        app:layout_goneMarginStart="16dp" />

    <Button
        android:id="@+id/btn_edit_twitter_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/edit"
        android:textColor="@color/black"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_twitter_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_twitter_circle" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_green_badge_public"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="-4dp"
        android:background="@color/white"
        android:src="@drawable/ic_check_green"
        app:layout_constraintBottom_toBottomOf="@id/iv_public"
        app:layout_constraintEnd_toEndOf="@id/iv_public"
        app:shapeAppearanceOverlay="@style/CircularImageView"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_green_badge_twitter_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="-4dp"
        android:visibility="gone"
        android:background="@color/white"
        android:src="@drawable/ic_check_green"
        app:layout_constraintBottom_toBottomOf="@id/iv_twitter_circle"
        app:layout_constraintEnd_toEndOf="@id/iv_twitter_circle"
        app:shapeAppearanceOverlay="@style/CircularImageView"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>